# bevy-portals

./: Cargo.toml
.cargo/: config.toml
assets/: registry.json
assets/shaders/: crosshair.wgsl  portal_view.wgsl
src/: component.rs  lib.rs  main.rs  physics.rs  resource.rs  system.rs
src/domain/: debug_info.rs  input.rs  mod.rs  player.rs  portal.rs  scene.rs  ui.rs
src/system/: debug_info.rs  input.rs  player.rs  setup.rs
