[package]
name = "bevy-portals"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[features]
default = ["debug"]
debug = ["bevy/dynamic_linking", "dep:bevy_editor_pls", "bevy_rapier3d/debug-render-3d"]

[dependencies]
bevy = { version = "0.13.2" }
bevy-tnua = { version = "0.18.0" }
bevy-tnua-rapier3d = { version = "0.6.0" }
bevy_editor_pls = { version = "0.8.1", optional = true }
bevy_rapier3d = { version = "0.26.0", features = ["dim3", "async-collider", "parallel", "simd-stable"], default-features = false}
cfg-if = "1.0.0"
uom = "0.36.0"
