[package]
name = "bevy-portals"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[features]
default = ["debug"]
debug = [
    # "bevy/dynamic_linking",
    "dep:bevy_editor_pls",
    "bevy_rapier3d/debug-render-3d",
]

[dependencies]
bevy = { version = "0.14.0" }
bevy-tnua = { version = "0.19.0" }
bevy-tnua-rapier3d = { version = "0.7.0" }
bevy_editor_pls = { git = "https://github.com/zhaop/bevy_editor_pls", branch = "bevy-0.14", optional = true }
# bevy_gltf_blueprints = "0.10.2"
# bevy_gltf_components = "0.5.1"
# bevy_gltf_save_load = "0.4.1"
bevy_rapier3d = { version = "0.27.0", features = [
    "dim3",
    "async-collider",
    "parallel",
    "simd-stable",
], default-features = false }
# bevy_registry_export = "0.3.1"
cfg-if = "1.0.0"
const_format = "0.2.32"
itertools = "0.13.0"
once_cell = "1.19.0"
rayon = "1.10.0"
